2006-02-09  Yves Combe  <yves@ycombe.net>

	new versions of magic hat by Marc Brun: addition and substraction.

	* boards/Makefile.am:
	* boards/boardicons/magic_hat.png:
	* boards/boardicons/magic_hat_minus.png:
	* boards/boardicons/magic_hat_plus.png:
	* boards/magic_hat.xml.in:
	* boards/magic_hat/magic_hat_minus.png:
	* boards/magic_hat/magic_hat_minus_bg.png:
	* boards/magic_hat/magic_hat_plus.png:
	* boards/magic_hat/magic_hat_plus_bg.png:
	* boards/magic_hat/star.png:
	* boards/magic_hat_minus.xml.in:
	* boards/magic_hat_plus.xml.in:
	* configure.in:
	* src/boards/magic_hat.c: (start_board), (process_ok),
	(magic_hat_create_item), (draw_frame), (draw_hat), (place_item),
	(item_event), (hat_event), (move_stars), (close_hat),
	(smooth_move):

2006-02-09  Yves Combe  <yves@ycombe.net>

	fix bug in memory_div and emory_mult_div. 
	fix font size and font color.

	* src/boards/memory.c: (get_image), (create_item):

2006-02-09  Yves Combe  <yves@ycombe.net>

	fix bug, change font size following level for memory operations activities.

	* src/boards/memory.c: (get_random_token), (start_board),
	(create_item), (compare_card):

2006-02-09  Yves Combe  <yves@ycombe.net>

	fix animation was launched after winning.
	add memory based mathematicals operations boards.

	* boards/Makefile.am:
	* boards/memory_add.xml.in:
	* boards/memory_add_minus.xml.in:
	* boards/memory_add_minus_mult_div.xml.in:
	* boards/memory_add_minus_mult_div_tux.xml.in:
	* boards/memory_add_minus_tux.xml.in:
	* boards/memory_add_tux.xml.in:
	* boards/memory_mult.xml.in:
	* boards/memory_mult_div.xml.in:
	* boards/memory_mult_div_tux.xml.in:
	* boards/memory_mult_tux.xml.in:
	* boards/memory_op_group.xml.in:
	* boards/memory_op_group_tux.xml.in:
	* src/boards/awele.c: (buttonClick):
	* src/boards/memory.c: (get_random_token), (start_board),
	(memory_destroy_all_items), (get_image), (create_item),
	(compare_card):

2006-02-08  Yves Combe  <yves@ycombe.net>
